// Copyright (c) 2024 Steven Rosenthal smr@dt3.org
// See LICENSE file in root directory for license terms.

syntax = "proto3";

import "google/protobuf/duration.proto";
import "google/protobuf/timestamp.proto";

import "tetra3.proto";

package cedar;

// In cedar_flutter/lib:
// run: protoc --experimental_allow_proto3_optional --dart_out=grpc:. --proto_path=../../src/proto ../../src/proto/cedar.proto

// General note: in the Cedar gRPC protocol, the client is a user interface
// typically realized as a web app or a mobile app. The client interacts with the
// server via gRPC, using the messages and RPCs defined in this proto file.
//
// The server runs independently of the client. In particular, image
// acquisitions, star detection, plate solving, and updates of SkySafari occur
// in the server even if no user interface client is connected. A client can obtain
// FrameResults at a rate equal to or slower than the rate at which the server
// is producing results.
//
// Note also that multiple clients can be connected to the same server, in which
// case each client can independenly obtain its own sequence of FrameResults
// without affecting the FrameResults seen by other clients (in other words, if
// client A obtains a FrameResult X, it is not "consumed", so client B can
// obtain the same FrameResult X). However, if any client updates the operating
// mode or settings of the server, the result of this will be visible to all
// clients.
//
// Finally, note Cedar's integration with SkySafari is a protocol separate from
// the gRPC protocol defined in this proto file. Similarly, Cedar's gRPC
// integration with Tetra3 is described in a separate proto file.

message FixedSettings {
  optional LatLong observer_location = 2;

  // The current time (when setting, this is the client's time; when retrieving,
  // this is the server's time). When setting, the server's current time is
  // updated to match.
  optional google.protobuf.Timestamp current_time = 4;

  // A name for the current observing session. If not supplied, one is generated
  // from the current time and the supplied latitude/longitude (converted to a
  // nearby location name).

  // The session name is used when storing boresight offset, when logging dwell
  // positions, and when logging debugging captures (the latter should go
  // elsewhere?).
  optional string session_name = 5;

  // The configured maximum exposure time. Note that this cannot be changed via
  // the UpdateFixedSettings() RPC.
  optional google.protobuf.Duration max_exposure_time = 6;
}

message LatLong {
  // Degrees.
  float latitude = 1;
  float longitude = 2;
}

message OperationSettings {
  // TODO: Camera number.

  // Defaults to SETUP mode.
  optional OperatingMode operating_mode = 4;

  // The camera exposure integration time. Zero selects automatic exposure.
  // Default is zero (auto).
  optional google.protobuf.Duration exposure_time = 5;

  // Controls the speed vs accuracy. Default is BALANCED. Only relevant in
  // OPERATE mode.
  // ACCURATE: uses longer exposures to obtain more detected stars. Also
  //   uses higher detection sigma threshold to reduce false star detections.
  //   Benefit: more robust plate solves, smaller RMS errors. Drawback: slower
  //   cycle time.
  // FASTER: shorter exposures to obtain fewer detected stars. Also uses
  //   lower detection sigma threshold to find more stars despite shorter
  //   exposures. Benefit: faster cycle time. Drawback: risk of failed plate
  //   solves from too few stars and more spurious detections.
  optional Accuracy accuracy = 3;

  // The desired time interval at which Cedar should replace its current frame
  // result. Default is zero, meaning go as fast as possible. Ignored in SETUP
  // mode.
  optional google.protobuf.Duration update_interval = 7;

  // In OPERATE mode, when Cedar detects that the camera is dwelling
  // (motionless) for more than some number of seconds, `dwell_update_interval`
  // is used instead of `update_interval`. Default is 1sec. Ignored in SETUP
  // mode.
  optional google.protobuf.Duration dwell_update_interval = 8;

  // If true, when Cedar detects that the camera is dwelling (motionless) for
  // more than some number of seconds, the RA/DEC is logged. Note that if the
  // RA/DEC are changing during dwelling due to sidereal motion (non-tracked
  // mount) or polar misalighment (tracked equatorial mount), only the RA/DEC
  // at the onset of dwelling is logged.
  optional bool log_dwelled_positions = 10;
}

enum OperatingMode {
  MODE_UNSPECIFIED = 0;

  // Mode supporting establishment of camera focus and boresight alignment of
  // camera and telescope:
  // * Exposure metered based on brightest point in central region.
  SETUP = 1;

  // Main operating mode. Continually updated RA/DEC sent to SkySafari.
  // Detection of tracking mount and accumulation of polar alignment advice
  // during dwells.
  // * Exposure metered based on number of detected stars.
  // * Plate solves done using FOV and distortion estimate obtained when
  //   leaving SETUP mode.
  OPERATE = 2;
}

// Reflects speed vs accuracy tradeoff in OPERATE mode.
enum Accuracy {
  ACCURACY_UNSPECIFIED = 0;

  FASTER = 1;
  BALANCED = 2;
  ACCURATE = 3;
}

// User interface preferences that are stored durably on the server.
message Preferences {
  // How the user interface should display celestial coordinates.
  optional CelestialCoordFormat celestial_coord_format = 1;

  // Diameter (in degrees) of the boresight circle displayed in operation
  // mode.
  optional float eyepiece_fov = 2;

  // If true, the UI should favor red highlights instead of white.
  optional bool night_vision_theme = 3;

  // If true, the UI continuously displays (some) Cedar performance statistics.
  optional bool show_perf_stats = 4;

  // If true, the UI app bar is hidden to allow full screen operation.
  optional bool hide_app_bar = 5;

  // The kind of telescope mount. This influences the display of the boresight
  // circle (cross aligned to north for EQUATORIAL or to zenith for ALT_AZ) and
  // target slew direction instructions.
  optional MountType mount_type = 6;

  // TODO: save image format (bmp, tiff, jpg, webp, FITS)
}

enum CelestialCoordFormat {
  FORMAT_UNSPECIFIED = 0;

  // Both right ascension and declination should be formatted as
  // decimal. Right ascension from 0..360, declination from -90..90.
  // Example:
  // RA  = 182.3345 degrees
  // DEC = 34.2351 degrees
  DECIMAL = 1;

  // Right ascension should be formatted as hours/minutes/seconds;
  // declination as degrees/minutes/seconds. The example values given
  // above would be:
  // RA  = 12h 9m 20.28s
  // DEC = 34d 14m 6.36s
  HMS_DMS = 2;
}

enum MountType {
  MOUNT_UNSPECIFIED = 0;
  EQUATORIAL = 1;
  ALT_AZ = 2;
}

message FrameRequest {
  // This is the frame_id of the previous FrameResult obtained by the requesting
  // client. If provided, GetFrame() will block until this is no longer the
  // server's current FrameResult. If omitted, GetFrame() will return the
  // server's current FrameResult.
  optional int32 prev_frame_id = 1;
}

// Next tag: 31.
message FrameResult {
  // Identifies this FrameResult. A client can include this in its next
  // FrameRequest to block until a new FrameResult is available.
  int32 frame_id = 1;

  // The current FixedSettings on the server.
  FixedSettings fixed_settings = 27;

  // The current user interface preferences stored on the server.
  Preferences preferences = 25;

  // The Cedar settings in effect for this frame.
  OperationSettings operation_settings = 2;

  // Calibration in effect for this frame.
  CalibrationData calibration_data = 5;

  // Information returned regardless of `operating_mode`.

  // The image from which information in this FrameResult is derived. Note that
  // this image has stretch/gamma applied for better visibility of dark
  // features.
  Image image = 3;

  // The camera exposure integration time for `image`.
  google.protobuf.Duration exposure_time = 7;

  // The time at which `image` was captured.
  google.protobuf.Timestamp capture_time = 9;

  // The camera temperature when `image` was captured.
  float camera_temperature_celsius = 10;

  // The star candidates detected by CedarDetect; ordered by brightest
  // first.
  repeated StarCentroid star_candidates = 4;

  // Estimate of the RMS noise of the full-resolution image. In 8 bit ADU
  // units.
  float noise_estimate = 26;

  // Information about Cedar's performance.
  ProcessingStats processing_stats = 8;

  // The position in full resolution image coordinates of the captured
  // boresight. If no boresight has been captured, is the image center. See
  // ActionRequest.capture_boresight.
  ImageCoord boresight_position = 21;

  // When transitioning from SETUP mode to OPERATE mode, Cedar does a brief
  // sky/camera calibration. During calibration most FrameResult fields are
  // omitted. Fields present are: fixed_settings, preferences,
  // operation_settings, image, calibrating, and calibration_progress.
  bool calibrating = 22;

  // When `calibrating` is true, this field is an estimate of the progress of
  // the calibration, which can take several seconds.
  optional float calibration_progress = 23;

  // Information returned when `operating_mode` is SETUP.

  // Identifies the center region used for brightest-star detection for focusing
  // support. In full resolution image coordinates.
  optional Rectangle center_region = 11;

  // The estimated position of the brightest point in `center_region`. In full
  // resolution image coordinates.
  optional ImageCoord center_peak_position = 12;

  // The pixel value at the center_peak_position.
  optional int32 center_peak_value = 6;

  // A small high resolution crop of `image` centered at `center_peak_position`.
  // Note that this image has stretch/gamma applied for better visibility of
  // dark features.
  optional Image center_peak_image = 13;

  // Information returned when `operating_mode` is OPERATE.

  // The current plate solution. Omitted if no plate solve was attempted for
  // this frame.
  optional tetra3_server.SolveResult plate_solution = 17;

  // When the observer's geographic location is known, the `plate_solution`
  // field is augmented with additional information.
  // Omitted if:
  // - no plate solution was obtained, or
  // - FixedSettings.observer_location is absent.
  optional LocationBasedInfo location_based_info = 29;

  // If present, SkySafari is requesting that the telescope's pointing should be
  // changed.
  optional SlewRequest slew_request = 24;

  // If the boresight is close to the slew target, the server returns a full
  // resolution crop of 'image' centered at the 'boresight_position'. Note that
  // this image has stretch/gamma applied for better visibility of dark
  // features.
  optional Image boresight_image = 28;

  // Contains information, if available, about adjusting the equatorial mount's
  // polar axis alignment.
  PolarAlignAdvice polar_align_advice = 30;

  // alerts
  // * prolonged loss of stars; need setup mode?
}

message Image {
  // Whether the image is binned/sampled or full resolution. Values:
  // 1: full resolution image from camera sensor.
  // 2: 2x lower resolution than camera sensor (in both x and y axes).
  // 4: 4x lower resolution than camera sensor.
  // 8: 8x lower resolution than camera sensor.
  int32 binning_factor = 1;

  // Specifies what part of the camera sensor this Image corresponds to, in full
  // resolution units. If binning_factor is B, the `image_data` dimensions are
  // rectangle.width/B, rectangle.height/B (floored).
  Rectangle rectangle = 2;

  // Must be a recognized file format, e.g. BMP grayscale 8 bits per pixel.
  bytes image_data = 3;
}

// Describes the position/size of an region within the camera's sensor. In
// full resolution units.
message Rectangle {
  int32 origin_x = 1;
  int32 origin_y = 2;
  int32 width = 3;
  int32 height = 4;
}

// Summarizes a star-like spot found by the CedarDetect algorithm.
message StarCentroid {
  // Location of star centroid in full resolution image coordinates.
  ImageCoord centroid_position = 1;

  // Sum of the uint8 pixel values of the star's region. The estimated
  // background is subtracted.
  float brightness = 4;

  // Count of saturated pixel values.
  int32 num_saturated = 6;
}

message ImageCoord {
  // A location in full resolution image coordinates. (0.5, 0.5) corresponds to
  // the center of the image's upper left pixel.
  float x = 1;
  float y = 2;
}

// Diagnostic information summarizing Cedar's performance.
message ProcessingStats {
  // How much time (in seconds) is spent detecting/centroiding stars.
  ValueStats detect_latency = 3;

  // The following items are omitted in SETUP mode.

  // Elapsed time (in seconds) between acquisition of an image (end of exposure)
  // and completion of a plate solution for it. Skipped images (i.e. solution
  // not attempted) do not contribute to this.
  ValueStats overall_latency = 2;

  // The interval at which new plate solutions (or lack thereof) are
  // available. Seconds per solution cycle.
  ValueStats solve_interval = 1;

  // How much time (in seconds) is spent plate solving (when attempted).
  ValueStats solve_latency = 4;

  // The fraction of images on which a plate solution is attempted. If too few
  // stars are detected we skip solving. Only the 'mean' is meaningful.
  ValueStats solve_attempt_fraction = 5;

  // The fraction of plate solve attempts that succeed. Only the 'mean' is
  // meaningful.
  ValueStats solve_success_fraction = 6;

  // How much time (in seconds) is spent preparing the FrameResult to be
  // returned. This includes time spent e.g. applying gamma to the display
  // image.
  ValueStats serve_latency = 7;
}

message ValueStats {
  // Stats from the most recent 100 results. Omitted if there are no results
  // yet.
  optional DescriptiveStats recent = 1;

  // Stats from the beginning of the session, or since the last transition
  // from SETUP mode to OPERATE mode.
  // Omitted if there are no results since session start or reset.
  optional DescriptiveStats session = 2;
}

// See each item in ProcessingStats for units.
message DescriptiveStats {
  double min = 1;
  double max = 2;

  double mean = 3;
  double stddev = 4;

  // Omitted for `session` stats.
  optional double median = 5;
  optional double median_absolute_deviation = 6;
}

message CalibrationData {
  // Omitted if a sky/camera calibration has not been attempted.
  optional google.protobuf.Timestamp calibration_time = 1;

  // Exposure time determined to yield the desired number of star detections
  // during calibration.
  // Operation mode varies the exposure duration around this value based on
  // the current detected star count.
  // If no calibration has succeeded, this will have reasonable default value
  // based on setup mode's auto exposure (or manual exposure setting during
  // setup).
  optional google.protobuf.Duration target_exposure_time = 2;

  // The camera offset value [0..20] found to be needed to avoid black crush.
  // Omitted if a sky/camera calibration has not succeeded.
  optional int32 camera_offset = 3;

  // The angular size (degrees) of the camera's width (longer dimension)
  // projected onto the sky.
  // Omitted if a sky/camera calibration has not succeeded.
  optional float fov_horizontal = 4;

  // Tetra3's estimate of the lens distortion (pincushion or barrel).
  // Omitted if a sky/camera calibration has not succeeded.
  optional float lens_distortion = 5;

  // The lens focal length in millimeters, derived from `fov_horizontal`
  // together with the camera's sensor's physical size.
  // Omitted if a sky/camera calibration has not succeeded.
  optional float lens_fl_mm = 6;

  // The angular size of a pixel, in degrees. This is for the field center, as
  // the "pinhole" projection of sky angles onto a planar detector causes the
  // pixel/angle scale to vary as you move away from the center.
  // Omitted if a sky/camera calibration has not succeeded.
  optional float pixel_angular_size = 7;
}

// When the observer's geographic location is known, the
// FrameResult.plate_solution field is augmented with additional information.
message LocationBasedInfo {
  // Similar to SolveResult.roll, except gives the position angle of the zenith
  // relative to the boresight. Angle is measured in degrees, with zero being
  // the image's "up" direction (towards y=0); a positive zenith roll angle
  // means the zenith is counter-clockwise from image "up".
  float zenith_roll_angle = 1;

  // Altitude (degrees, relative to the local horizon) of the boresight.
  float altitude = 2;

  // Azimuth (degrees, positive clockwise from north) of the boresight.
  float azimuth = 3;

  // Hour angle (degrees, -180..180). Negative hour angle means boresight
  // is approaching the meridian from east; positive means boresight
  // is moving away from the meridian towards west.
  float hour_angle = 4;
}

// Describes a telescope motion request from SkySafari.
message SlewRequest {
  // Identifies the target coordinate of the telescope motion request.
  tetra3_server.CelestialCoord target = 1;

  // The distance, in degrees, between the boresight and the target. Omitted
  // if there is no valid plate solution.
  optional float target_distance = 2;

  // The position angle (degrees) from the boresight to the target. If the
  // target is above the boresight in image coordinates, the position angle is
  // zero. Positive target_angle values go counter-clockwise from image "up", so
  // a target_angle value of 90 degrees means the target is to the left of the
  // boresight in the image.
  // Omitted if there is no valid plate solution.
  optional float target_angle = 3;

  // To move the boresight to the target, this is the angle by which the
  // telescope must be moved about the rotation axis (right ascension for
  // equatorial mount; azimuth for alt/az mount). Degrees; positive is towards
  // east in equatorial, clockwise (viewed from above) in alt/az. Omitted if
  // alt/az mode and observer location has not been set.
  // Range: -180..180
  optional float offset_rotation_axis = 5;

  // To move the boresight to the target, this is the angle by which the
  // telescope must be moved about the other axis (declination for equatorial
  // mount; altitude for alt/az mount). Degrees; positive is towards north pole
  // in equatorial, towards zenith in alt/az. Omitted if alt/az mode and
  // observer location has not been set.
  // Range: -180..180
  optional float offset_tilt_axis = 6;

  // Position of the target in FrameResult.image (in full image resolution
  // coordinates).
  // Omitted if the target is not in the field of view or there is no valid
  // plate solution.
  optional ImageCoord image_pos = 4;

  // True if the target's image position is within the center_region defined
  // in SETUP mode. False otherwise, or if there is no valid plate solution.
  bool target_within_center_region = 7;
}

// Estimate of alt/az offset of mount's polar axis from celestial pole. Not
// available if the telescope is not a clock-driven equatorial mount
// (auto-detected) or if the observer's geographic location is not known. Note
// that it is possible for one of alt or az correction to be supplied and the
// other omitted.
message PolarAlignAdvice {
  // The amount by which the mount azimuth should be adjusted, in degrees.
  // Positive is clockwise looking down at the mount from above; in northern
  // (southern) hemisphere this is moving polar axis towards east (west).
  optional ErrorBoundedValue azimuth_correction = 1;

  // The amount by which the mount elevation should be adjusted, in degrees.
  // Positive means raise the polar axis.
  optional ErrorBoundedValue altitude_correction = 2;
}

// A value estimate +/- an error estimate.
message ErrorBoundedValue {
  // The estimated value.
  float value = 1;

  // Estimate of the RMS error of `value`.
  float error = 2;
}

message ActionRequest {
  // Capture boresight offset. In focus mode, this is based on current location
  // of brightest peak in central region. Context:
  // 1. Cedar is in focus mode.
  // 2. User focuses on bright star.
  // 3. User centers the same star in the telescope's field of view.
  // 4. User adjusts aim of the Cedar camera to have the bright star near the
  //    center of the image.
  // 5. User invokes the capture_boresight function.
  // At this point, the captured boresight position will be returned in each
  // FrameResult's `boresight_position` field, and will cause a single
  // `target_coords` entry to be included with each FrameResult
  // `plate_solution`.
  // Note that `capture_boresight` can also be used during an active slew to
  // target, when SlewRequest's `target_within_center_region` field is true.
  // This lets the user update/refine the boresight offset when the user
  // has centered the target in the telescope's field of view.
  optional bool capture_boresight = 1;

  // Shut down the computer on which the Cedar server is running. Do this before
  // unplugging the power!
  optional bool shutdown_server = 3;

  // Tells SkySafari that the slew is finished (or discontinued).
  optional bool stop_slew = 4;

  // Save the current image for debugging. The image is saved in TBD directory
  // on the server with the current date/time incorporated into the filename.
  // TODO: return filename? Provide rename action?
  optional bool save_image = 5;
}

message ServerInformationRequest {
  // Specifies how many bytes (most recent) of the server log to retrieve.
  optional int32 log_request = 1;

  // Empty.
  // TODO: int to request N most recent lines of server log
}

message ServerInformationResult {
  optional string log_content = 1;

  // Cedar version.

  // Tetra3 version.

  // Star catalog information.

  // Processor info.
  // * model: RPi or other board model
  // * OS version, etc.
  // * RAM present, used, free
  // * temperature
  // * free disk space

  // Network info (hosted network, or access point?)

  // Current time (UTC) on Cedar server.

  // ordered list of detected cameras; for each:
  // * Camera make/model
  // * Resolution

  // Status of SkySafari integration; SkySafari version.
}

message EmptyMessage {}

service Cedar {
  // Returns information about the Cedar server.
  rpc GetServerInformation(ServerInformationRequest) returns (ServerInformationResult);

  // Changes zero or more of Cedar's "fixed" settings. If a field is omitted
  // from the supplied FixedSettings, that setting is not updated. Returns the
  // FixedSettings after any updates have been applied. To get the current
  // settings without making any changes, pass an empty FixedSettings request.
  rpc UpdateFixedSettings(FixedSettings) returns (FixedSettings);

  // Changes zero or more of Cedar's operation settings. If a field is omitted
  // from the supplied OperationSettings, that setting is not updated. Returns
  // the OperationSettings after any updates have been applied (in most cases;
  // when changing from SETUP to OPERATION mode, the change is not immediately
  // reflected due to the intervening calibration step).
  // To get the current settings without making any changes, pass an empty
  // OperationSettings request.
  rpc UpdateOperationSettings(OperationSettings) returns (OperationSettings);

  // Changes zero or more of Cedar's user interface preferences. If a field is
  // omitted from the supplied Preferences, that preference is not updated.
  // Returns the Preferences after any updates have been applied. To get the
  // current preferences without making any changes, pass an empty Preferences
  // request.
  rpc UpdatePreferences(Preferences) returns (Preferences);

  // Obtains the most recent Cedar computation result. Blocks if necessary to
  // wait for a new result (see FrameRequest's `prev_frame_id` field).
  rpc GetFrame(FrameRequest) returns (FrameResult);

  // Performs the requested action(s).
  rpc InitiateAction(ActionRequest) returns (EmptyMessage);
}
